# job-monitor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: monitor.yml
examples/: data-science.yml  remote-only.yml  software-engineer.yml
job_monitor/: __init__.py  __main__.py  cli.py  config.py  dedup.py  mcp_server.py  output.py  pipeline.py
job_monitor/integrations/: email_drafter.py  enrichment.py  sheets.py
job_monitor/notify/: email.py
job_monitor/sources/: __init__.py  _apify.py  google_jobs.py  indeed.py  linkedin.py  usajobs.py
job_monitor/storage/: __init__.py  sqlite.py  supabase.py
